fix top padding in navbar on mobile

--- a/components/leftPanel.module.scss
+++ b/components/leftPanel.module.scss
@@ -5,10 +5,11 @@
 .all {
   position: sticky;
   top: 0;
-  height: 500px;
-  @media (min-width: 768px) {
-    height: 100vh;
-    padding: 3.5rem 0;
+  height: 100vh;
+  padding: 3.5rem 0;
+  @media (max-width: 767.98px) {
+    height: 500px;
+    padding-top: 3.5rem;
   }
   .avatarContainer {
     @media (max-height: 500px) {
